frontend/src/lib/shdl/shdlPegParser.js


  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  export function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = "module",
        peg$c1 = peg$literalExpectation("module", false),
        peg$c2 = "(",
        peg$c3 = peg$literalExpectation("(", false),
        peg$c4 = ")",
        peg$c5 = peg$literalExpectation(")", false),
        peg$c6 = "end",
        peg$c7 = peg$literalExpectation("end", false),
        peg$c8 = function(name, params, instances) { return {"name": name, "params": params, "instances":instances}; },
        peg$c9 = "[",
        peg$c10 = peg$literalExpectation("[", false),
        peg$c11 = "]",
        peg$c12 = peg$literalExpectation("]", false),
        peg$c13 = function(name, i) { return {"type": "vector", "name": name, "start": i, "stop": i, "location": location()}; },
        peg$c14 = function(name, i, j) { return {"type": "vector", "name": name, "start": i, "stop": j, "location": location()}; },
        peg$c15 = function(name) { return {"type": "scalar", "name": name, "location": location()}; },
        peg$c16 = "&",
        peg$c17 = peg$literalExpectation("&", false),
        peg$c18 = function(head, tail) { return {'type': 'signalcompound', 'signals': [head].concat(tail.map(function(block) { return block[3]; })), "location": location()} },
        peg$c19 = function(head, tail) { return {'type': 'signalorliteralcompound', 'signalorliterals': [head].concat(tail.map(function(block) { return block[3]; })), "location": location()} },
        peg$c20 = "..",
        peg$c21 = peg$literalExpectation("..", false),
        peg$c22 = ":",
        peg$c23 = peg$literalExpectation(":", false),
        peg$c24 = peg$otherExpectation("module name"),
        peg$c25 = /^[a-zA-Z0-9_]/,
        peg$c26 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false),
        peg$c27 = function(chars) { return chars.join(""); },
        peg$c28 = peg$otherExpectation("signal name"),
        peg$c29 = /^[a-zA-Z_]/,
        peg$c30 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false),
        peg$c31 = function(char0, chars) { return (char0 + chars.join("")); },
        peg$c32 = peg$otherExpectation("state name"),
        peg$c33 = function(chars) { return {'name': chars.join(""), 'location': location()}; },
        peg$c34 = function(head, tail) { return [head].concat(tail); },
        peg$c35 = function(param) { return [param]; },
        peg$c36 = function(arg) { return [arg]; },
        peg$c37 = function(inst) { return [inst]; },
        peg$c38 = function(head, tail) { return {'type': 'sumoftermscompound', 'sumofterms': [head].concat(tail.map(function(block) { return block[3]; })), "location": location()} },
        peg$c39 = "+",
        peg$c40 = peg$literalExpectation("+", false),
        peg$c41 = function(head, tail) { return {'type': 'sumofterms', 'terms': [head].concat(tail.map(function(block) { return block[3]; })), "location": location()} },
        peg$c42 = "*",
        peg$c43 = peg$literalExpectation("*", false),
        peg$c44 = function(head, tail) { return {'type': 'term', 'factors': [head].concat(tail.map(function(block) { return block[3]; })), "location": location()} },
        peg$c45 = function(sumofterms) { return {'type':'sumofterms', 'sumofterms': sumofterms, "location": location()}; },
        peg$c46 = "0",
        peg$c47 = peg$literalExpectation("0", false),
        peg$c48 = function() { return {'type':'bitfield', 'value': "0", "location": location()}; },
        peg$c49 = "1",
        peg$c50 = peg$literalExpectation("1", false),
        peg$c51 = function() { return {'type':'bitfield', 'value': "1", "location": location()}; },
        peg$c52 = function(bitField) { return {'type':'bitfield', 'value': bitField.value, "location": location()}; },
        peg$c53 = function(signal) { return {'type':'maxterm', 'signal':signal, 'inverted': false, "location": location()}; },
        peg$c54 = "/",
        peg$c55 = peg$literalExpectation("/", false),
        peg$c56 = function(signal) { return {'type':'maxterm', 'signal':signal, 'inverted': true, "location": location()}; },
        peg$c57 = "=",
        peg$c58 = peg$literalExpectation("=", false),
        peg$c59 = function(leftCompound, rightCompound) { return {'type': 'assignment', 'leftCompound': leftCompound, 'rightCompound': rightCompound}; },
        peg$c60 = "output",
        peg$c61 = peg$literalExpectation("output", false),
        peg$c62 = "enabled",
        peg$c63 = peg$literalExpectation("enabled", false),
        peg$c64 = "when",
        peg$c65 = peg$literalExpectation("when", false),
        peg$c66 = function(leftCompound, rightCompound, oe) { return {'type': 'tri_state', 'leftCompound': leftCompound, 'rightCompound': rightCompound, oe: oe }; },
        peg$c67 = ":=",
        peg$c68 = peg$literalExpectation(":=", false),
        peg$c69 = "on",
        peg$c70 = peg$literalExpectation("on", false),
        peg$c71 = ",",
        peg$c72 = peg$literalExpectation(",", false),
        peg$c73 = "reset",
        peg$c74 = peg$literalExpectation("reset", false),
        peg$c75 = "set",
        peg$c76 = peg$literalExpectation("set", false),
        peg$c77 = function(q, d, clk, setReset, rst, en) { return {'type': 'memory_point', 'q': q, 'd': d, clk: clk, setReset: setReset, rst: rst, en: en }; },
        peg$c78 = function(q, d, clk, setReset, rst) { return {'type': 'memory_point', 'q': q, 'd': d, clk: clk, setReset: setReset, rst: rst, en: null }; },
        peg$c79 = function(name, args) { return {'type': 'module_instance', 'name': name, 'arguments': args, location: location()}; },
        peg$c80 = "$",
        peg$c81 = peg$literalExpectation("$", false),
        peg$c82 = function(name, args) { return {'type': 'predefined_module_instance', 'name': name, 'arguments': args, location: location()}; },
        peg$c83 = "map",
        peg$c84 = peg$literalExpectation("map", false),
        peg$c85 = "->",
        peg$c86 = peg$literalExpectation("->", false),
        peg$c87 = function(input, output, values) { return { 'type': 'array', 'input': input, 'output': output, 'values': values }; },
        peg$c88 = function(input, output) { return { 'input': input, 'output': output }; },
        peg$c89 = function(header, rules) { return {'type': 'fsm', 'header': header, 'rules': rules}; },
        peg$c90 = "fsm",
        peg$c91 = peg$literalExpectation("fsm", false),
        peg$c92 = "statemachine",
        peg$c93 = peg$literalExpectation("statemachine", false),
        peg$c94 = "asynchronous",
        peg$c95 = peg$literalExpectation("asynchronous", false),
        peg$c96 = function() { return {'type': 'asynchronous'}; },
        peg$c97 = "synchronous",
        peg$c98 = peg$literalExpectation("synchronous", false),
        peg$c99 = function(init, rst, clk) { return {'type': 'synchronous', 'rst': rst, 'clk': clk, 'init': init}; },
        peg$c100 = function(clk, init, rst) { return {'type': 'synchronous', 'rst': rst, 'clk': clk, 'init': init}; },
        peg$c101 = ";",
        peg$c102 = peg$literalExpectation(";", false),
        peg$c103 = function(leftStates, rightState, condition) { return {'type':'fsm_rule', 'left_states': leftStates, 'right_state': rightState, 'condition': condition}; },
        peg$c104 = function(leftStates, rightState) { return {'type':'fsm_rule', 'left_states': leftStates, 'right_state': rightState }; },
        peg$c105 = function(rule) { return [rule]; },
        peg$c106 = function(state) { return [state]; },
        peg$c107 = "\"",
        peg$c108 = peg$literalExpectation("\"", false),
        peg$c109 = /^[0-1]/,
        peg$c110 = peg$classExpectation([["0", "1"]], false, false),
        peg$c111 = function(value) { return { type: 'bitfield', value: value.join('') } },
        peg$c112 = function(bitfield) { return { type: 'literal', value: bitfield.value } },
        peg$c113 = function() { return { type: 'literal', value: "0" } },
        peg$c114 = function() { return { type: 'literal', value: "1" } },
        peg$c115 = /^[0-9]/,
        peg$c116 = peg$classExpectation([["0", "9"]], false, false),
        peg$c117 = function() { return parseInt(text(), 10) },
        peg$c118 = function() { return [] },
        peg$c119 = peg$otherExpectation("whitespace"),
        peg$c120 = function() { return []; },
        peg$c121 = /^[\t\x0B\f \xA0\uFEFF]/,
        peg$c122 = peg$classExpectation(["\t", "\x0B", "\f", " ", "\xA0", "\uFEFF"], false, false),
        peg$c123 = /^[\n\r]/,
        peg$c124 = peg$classExpectation(["\n", "\r"], false, false),
        peg$c125 = "//",
        peg$c126 = peg$literalExpectation("//", false),
        peg$c127 = "#",
        peg$c128 = peg$literalExpectation("#", false),
        peg$c129 = peg$anyExpectation(),

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsestart() {
      var s0;

      s0 = peg$parseModule();

      return s0;
    }

    function peg$parseModule() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16, s17;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 6) === peg$c0) {
          s2 = peg$c0;
          peg$currPos += 6;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c1); }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseModuleName();
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_();
              if (s5 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 40) {
                  s6 = peg$c2;
                  peg$currPos++;
                } else {
                  s6 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c3); }
                }
                if (s6 !== peg$FAILED) {
                  s7 = peg$parse_();
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parseParamList();
                    if (s8 !== peg$FAILED) {
                      s9 = peg$parse_();
                      if (s9 !== peg$FAILED) {
                        if (input.charCodeAt(peg$currPos) === 41) {
                          s10 = peg$c4;
                          peg$currPos++;
                        } else {
                          s10 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c5); }
                        }
                        if (s10 !== peg$FAILED) {
                          s11 = peg$parse_();
                          if (s11 !== peg$FAILED) {
                            s12 = peg$parseInstanceList();
                            if (s12 !== peg$FAILED) {
                              s13 = peg$parse_();
                              if (s13 !== peg$FAILED) {
                                if (input.substr(peg$currPos, 3) === peg$c6) {
                                  s14 = peg$c6;
                                  peg$currPos += 3;
                                } else {
                                  s14 = peg$FAILED;
                                  if (peg$silentFails === 0) { peg$fail(peg$c7); }
                                }
                                if (s14 !== peg$FAILED) {
                                  s15 = peg$parse_();
                                  if (s15 !== peg$FAILED) {
                                    if (input.substr(peg$currPos, 6) === peg$c0) {
                                      s16 = peg$c0;
                                      peg$currPos += 6;
                                    } else {
                                      s16 = peg$FAILED;
                                      if (peg$silentFails === 0) { peg$fail(peg$c1); }
                                    }
                                    if (s16 !== peg$FAILED) {
                                      s17 = peg$parse_();
                                      if (s17 !== peg$FAILED) {
                                        peg$savedPos = s0;
                                        s1 = peg$c8(s4, s8, s12);
                                        s0 = s1;
                                      } else {
                                        peg$currPos = s0;
                                        s0 = peg$FAILED;
                                      }
                                    } else {
                                      peg$currPos = s0;
                                      s0 = peg$FAILED;
                                    }
                                  } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                  }
                                } else {
                                  peg$currPos = s0;
                                  s0 = peg$FAILED;
                                }
                              } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                              }
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseSignal() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

      s0 = peg$currPos;
      s1 = peg$parseSignalName();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 91) {
            s3 = peg$c9;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c10); }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseNaturalInteger();
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_();
                if (s6 !== peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 93) {
                    s7 = peg$c11;
                    peg$currPos++;
                  } else {
                    s7 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c12); }
                  }
                  if (s7 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c13(s1, s5);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseSignalName();
        if (s1 !== peg$FAILED) {
          s2 = peg$parse_();
          if (s2 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 91) {
              s3 = peg$c9;
              peg$currPos++;
            } else {
              s3 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c10); }
            }
            if (s3 !== peg$FAILED) {
              s4 = peg$parse_();
              if (s4 !== peg$FAILED) {
                s5 = peg$parseNaturalInteger();
                if (s5 !== peg$FAILED) {
                  s6 = peg$parse_();
                  if (s6 !== peg$FAILED) {
                    s7 = peg$parseDotDot();
                    if (s7 !== peg$FAILED) {
                      s8 = peg$parse_();
                      if (s8 !== peg$FAILED) {
                        s9 = peg$parseNaturalInteger();
                        if (s9 !== peg$FAILED) {
                          s10 = peg$parse_();
                          if (s10 !== peg$FAILED) {
                            if (input.charCodeAt(peg$currPos) === 93) {
                              s11 = peg$c11;
                              peg$currPos++;
                            } else {
                              s11 = peg$FAILED;
                              if (peg$silentFails === 0) { peg$fail(peg$c12); }
                            }
                            if (s11 !== peg$FAILED) {
                              peg$savedPos = s0;
                              s1 = peg$c14(s1, s5, s9);
                              s0 = s1;
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseSignalName();
          if (s1 !== peg$FAILED) {
            s2 = peg$parse_();
            if (s2 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 91) {
                s3 = peg$c9;
                peg$currPos++;
              } else {
                s3 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c10); }
              }
              if (s3 !== peg$FAILED) {
                s4 = peg$parse_();
                if (s4 !== peg$FAILED) {
                  s5 = peg$parseNaturalInteger();
                  if (s5 !== peg$FAILED) {
                    s6 = peg$parse_();
                    if (s6 !== peg$FAILED) {
                      s7 = peg$parseDotDot();
                      if (s7 !== peg$FAILED) {
                        s8 = peg$parse_();
                        if (s8 !== peg$FAILED) {
                          s9 = peg$parseNaturalInteger();
                          if (s9 !== peg$FAILED) {
                            s10 = peg$parse_();
                            if (s10 !== peg$FAILED) {
                              if (input.charCodeAt(peg$currPos) === 93) {
                                s11 = peg$c11;
                                peg$currPos++;
                              } else {
                                s11 = peg$FAILED;
                                if (peg$silentFails === 0) { peg$fail(peg$c12); }
                              }
                              if (s11 !== peg$FAILED) {
                                peg$savedPos = s0;
                                s1 = peg$c14(s1, s5, s9);
                                s0 = s1;
                              } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                              }
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
